--- a/medi.css
+++ b/medi.css
@@ -21,7 +21,7 @@
 
 .search {
     position: relative;
-    box-shadow: 0 0 11px var(--c-dark);
+    box-shadow: 0px 10px 45px 5px var(--c-dark);
     border-radius: 25px;
 }
 
